css/shanti-search.css
/* ... */
.view-section .nav-tabs>li.active> a .shanticon:before{ font-size:16px; position:relative; top:1px; right:5px;}
/*---- END tabs -----*/

/*---- START list table view ----*/
.view-section table.table-responsive{ text-align:center; border:none;}
.view-section table.table-results{ border:none; font-size:13px; line-height:20px; margin:0 2%; margin-top:-9px !important; width:96%; font-family:'droidserif',palatino,'Palatino Linotype',georgia,serif;}
.view-section table.table-results a{ font-style:italic;}

.view-section table.table-results{ border:none; font-size:13px; line-height:20px; height:20px; margin-bottom:0; margin:0 2%; width:96%; font-family:'droidserif',palatino,'Palatino Linotype',georgia,serif;}
.view-section table.table-results a{ font-style:italic;}
.view-section table.table-results tbody>tr,
.view-section table.table-results thead tr th,
.view-section table.table-results tbody>tr>td{ line-height:20px;text-align:left; white-space:nowrap; /*display:block;*/}
.view-section table.table-results tbody tr:hover{ background: #fff;}
.view-section table.table-results thead tr th:after{ color:#555; font-family: 'shanticon'; content: '\e609'; font-size: 14px; margin-left:0; position:relative; top:2px;}
.view-section table.table-results thead tr th{ color:#333;}
.view-section table.table-results thead tr th:hover,
.view-section table.table-results thead tr th:hover:after{ color:#d00; cursor:pointer;}

.view-section .table>thead>tr{ border-bottom:2px solid #ddd;}
.view-section .table>thead>tr>th{ border-bottom:none;}

/* .view-section .table>thead:first-child>tr:first-child>th{ float:left;} */

.view-section table.table-results tr:nth-child(even) {background: #fcfcfc;}
.view-section table.table-results tbody>tr>td blockquote,
.view-section table.table-results tbody>tr>td quote{ font-size: 0.5em !important;}

th.sorting_asc,
table.dataTable thead .sorting_asc{ background:none;border:none;width:0;min-width:0; }


.view-section .dataTables_length label{ margin-left:10px;}
.view-section .dataTables_filter input{ position:relative; top:-2px;}
.view-section .dataTables_filter label{ position:relative; top:0; margin-right:10px;}

.view-section .dataTables_info {font-size: 0.82em; margin-left: 1em; margin-bottom:20px;}


/* trunk8 */
.view-section .col-xs-6 { width: 85%;font-size: 0.6em; padding-right: 0;/*padding-left: 0em;*//*margin-left: -2em;*/}
.view-section .pagination>li>a, .pagination>li>span { padding: 0.5em 0.8em;}
.view-section .pagination { margin-left: 1em;margin-top: 0.3em;margin-bottom: 0.1em;margin-right: -0.5em;}
.view-section .row {margin-right: 0;/*margin-left: 0em;*/}
/* .listview td.sorting_1 { min-width: 12em;} */
.view-section .title-field { position: static;float: none;/*width: 85%;*//*max-height: 1.3em;*//*white-space: nowrap;*//*overflow: hidden;*//*text-overflow: ellipsis;*/}
.view-section .row {/*margin: 1em 1em 1em 1em;*/}
.view-section .popover-content {font-family: sans-serif;font-size: smaller;}
.view-section .popover-content > blockquote p {font-size: 13px;}
.view-section .popover-content > blockquote {
    border-left: none;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
}

.view-section .popover-content .kmapid-display,
.view-section .counts-display {
    display: block;
    float: right;
    clear: both;
    font-size: smaller;
    white-space:nowrap;
    margin-left: 0;
    margin-right: 0;
    color: #888;
}

.view-section .popover-content .info-wrap {min-width: 18em;}
.view-section .popover-content .counts-display { display:block; height: 40px; padding:5px; }
.view-section .popover-title .kmapid-display {
    display: block;
    float: right;
    clear: both;
    font-size: 1em;
    white-space:nowrap;
    margin-left: 0;
    margin-right: 0;
    color: #888;
}
.view-section .popover-title .kmapid-display:before {color: #888;/*content: 'kmapid: '*/}
.view-section .popover-content .badge {
    margin:0 5px;
    position: relative;
    top: 19px;
    font-size: 10px;
    font-family: sans-serif;
    letter-spacing: 0.06em;
    border:1px solid #c0c0c0;
    background:#f9f9f9;
    color:#444;
    padding:2px 6px;
    line-height:8px;
    height:15px;
}
.view-section .popover-content .associated:first-child .badge{ }

.view-section .popover-content span.associated{ /* background:#f0f0f0; */ text-align:center; float:right; position:relative; top:-4px; height:35px !important; margin:0 0 5px 0; border-left:1px solid #ddd; }
.view-section .popover-content span.associated+span.associated{ }
.view-section .popover-content span.associated:first-child{
	margin-right:-15px;
}
.view-section .popover-content span.associated+span.associated:before {}
.view-section .listview h3.popover-title {font-size: medium;}


.view-section .popover-content span.associated i{
	font-size:1.68em;
	position:absolute;
	bottom:19px;
	color:#777;
	margin:0 6px;
}
/*--- END trunk8 */
/*-----------------*/
/*--- END Table ---*/







/*------------------------------*/
/*---- START :: Search Tree ----*/
/*------------------------------*/
.view-section ul.fancytree-container{ margin:0; background:transparent; border:none; font-family:'droidserif',palatino,'Palatino Linotype',georgia,serif; }
.view-section ul.fancytree-container ul{ padding-top:0; margin-top:0;}
.view-section ul.fancytree-container li{ }

.view-section .fancytree-icon{ margin:0; padding:0; width:0; height:0; line-height:0; display:none;} /*--- remove checkbox ---*/
.view-section .fancytree-node{ border:none; display:block;}

.view-section .fancytree-expander:before{ }
.view-section .fancytree-node.fancytree-active{ background:white !important; border:none; -webkit-box-shadow: 0 0 3px 0 #aaa; box-shadow: 0 0 3px 0 #aaa; border-collapse: separate; /* fix for ie9 shadow */}


.view-section .fancytree-node .ajax-progress{ position:relative;top:-21px; right:5px; background:#fff;}
/* ... */

